[GTK] Smooth scrolling should not apply to continuous scrolling with sync scrolling https://bugs.webkit.org/show_bug.cgi?id=218133

Reviewed by Adrian Perez de Castro.

Source/WebCore:

Respect PlatformWheelEvent.hasPreciseScrollingDeltas in the base
ScrollAnimator class, and make sure the flag is set correctly for
GdkEvent.

* SourcesGTK.txt:
* platform/PlatformWheelEvent.h:
(WebCore::PlatformWheelEvent::setHasPreciseScrollingDeltas):
* platform/ScrollAnimator.cpp:
(WebCore::ScrollAnimator::scroll):
(WebCore::ScrollAnimator::scrollWithoutAnimation):
(WebCore::ScrollAnimator::handleWheelEvent):
* platform/ScrollAnimator.h:
* platform/gtk/GtkVersioning.h:
(gdk_event_get_source_device):
* platform/gtk/PlatformWheelEventGtk.cpp: Removed.

Source/WebKit:

Set hasPreciseScrollDeltas appropriately on scroll events created from GdkEvent.

* Shared/gtk/WebEventFactory.cpp:
(WebKit::WebEventFactory::createWebWheelEvent):


Canonical link: https://commits.webkit.org/231016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269143 268f45cc-cd09-0410-ab3c-d52691b4dbfc